--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: ad-optimizer:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
