--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,8 @@ isort>=5.13.0
 prometheus-client>=0.19.0
 
 # UI
-gradio==4.26.0
+gradio==4.37.0
+huggingface-hub>=0.21.0
 
 # Data Science
 numpy>=1.24.0
