--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ google-ads>=23.0.0
 facebook-business>=19.0.0
 requests>=2.31.0
 openpyxl>=3.1.0
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi>=0.115.2
+uvicorn[standard]>=0.24.0
 
 # Testing Dependencies
 pytest>=7.4.0
