feat: Update API endpoint to accept campaign data and point Gradio to Cloud Run

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: ad-optimizer
-          image: your-registry/ad-optimizer:latest
+          image: docker.io/abalara2/ad-optimizer:latest
           ports:
             - containerPort: 8000
           env:
