--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,3 +132,41 @@ jobs:
       - name: Test Docker image
         run: |
           docker run --rm ad-optimizer:latest python --version
+
+  deploy-cloud-run:
+    name: Deploy to Cloud Run
+    runs-on: ubuntu-latest
+    needs: [test, code-quality, docker]
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ad-optimizer-484001
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Configure Docker for GCP
+        run: |
+          gcloud auth configure-docker gcr.io
+
+      - name: Build and push to GCP Container Registry
+        run: |
+          docker build -t gcr.io/ad-optimizer-484001/ad-optimizer:latest .
+          docker push gcr.io/ad-optimizer-484001/ad-optimizer:latest
+
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy ad-optimizer \
+            --image gcr.io/ad-optimizer-484001/ad-optimizer:latest \
+            --platform managed \
+            --region us-central1 \
+            --allow-unauthenticated \
+            --memory 4Gi \
+            --cpu 2 \
+            --timeout 600 \
+            --set-env-vars OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
