--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,10 @@ requests>=2.31.0
 openpyxl>=3.1.0
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-
+fastapi
+uvicorn[standard]
+gradio
+requests
 
 # Testing Dependencies
 pytest>=7.4.0
