--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,14 @@ kaggle>=1.5.0
 google-ads>=23.0.0
 facebook-business>=19.0.0
 requests>=2.31.0
-openpyxl>=3.1.0
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-fastapi
-uvicorn[standard]
-gradio
-requests
+
+# API + UI (Gradio requires FastAPI >= 0.115.2)
+fastapi>=0.115.2
+uvicorn[standard]>=0.24.0
+gradio==5.50.0
+huggingface-hub==0.27.1
+
+
 
 # Testing Dependencies
 pytest>=7.4.0
