--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ kaggle>=1.5.0
 google-ads>=23.0.0
 facebook-business>=19.0.0
 requests>=2.31.0
+matplotlib>=3.8.0
+
 
 # API + UI (Gradio requires FastAPI >= 0.115.2)
 fastapi>=0.115.2
